# MinecraftServerManager

./: .gitignore  LICENSE  Makefile  README.md  config.example.yaml  pyproject.toml
deploy/: mcbot.service
scripts/: test_apis.py
src/: __init__.py  main.py
src/bot/: __init__.py  bot.py  keyboards.py  notifications.py
src/bot/handlers/: __init__.py  admin.py  backup.py  config.py  mods.py  players.py  roles.py  server.py  start.py
src/bot/middlewares/: __init__.py  auth.py
src/core/: __init__.py  auto_shutdown.py  backup_manager.py  log_watcher.py  process_handler.py  rcon.py  server_manager.py
src/engines/: __init__.py  base.py  forge.py  vanilla.py
src/i18n/: __init__.py  translator.py
src/i18n/locales/: en.yaml  ru.yaml
src/minecraft/: __init__.py  server_properties.py  whitelist.py
src/mods/: __init__.py  mod_manager.py  modrinth_api.py
src/storage/: __init__.py  database.py  models.py
src/utils/: config.py  java.py  network.py  server_scanner.py
